# lvgl_ebike_dashborad

./: .gitmodules  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c
ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_dropdown.c  ui_comp_dropdown.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_roller.c  ui_comp_roller.h
ui/images/: ui_img_battery_bg_png.c  ui_img_ebike_bg_png.c  ui_img_gps_bg_png.c  ui_img_gps_knob_png.c  ui_img_icn_battery_png.c  ui_img_icn_bike_png.c  ui_img_icn_charge_png.c  ui_img_icn_flash_png.c  ui_img_icn_map_png.c  ui_img_icn_ok_png.c  ui_img_icn_settings_png.c  ui_img_icn_x2_png.c  ui_img_icn_x_png.c  ui_img_map_png.c  ui_img_menu_line_png.c  ui_img_menu_on_png.c  ui_img_particle_1_png.c  ui_img_particle_2_png.c  ui_img_particle_3_png.c  ui_img_pin_line_png.c  ui_img_pin_on_png.c  ui_img_right_png.c  ui_img_settings_bg_png.c  ui_img_settings_corner_png.c  ui_img_slider_battery_png.c  ui_img_speed_slider_png.c  ui_img_volume_off_png.c  ui_img_volume_on_png.c  ui_img_water_1_png.c  ui_img_water_2_png.c
ui/screens/: ui_Home.c  ui_Home.h  ui_Settings.c  ui_Settings.h
